@@ -1,3 +1,8 @@
+2014-10-06  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * gpasm/gpasm.c:
+    The --list-processor-properties option gives a little more
+    informations.
+
 2014-10-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gpasm/directive.c, gpasm/processor.c,
     libgputils/gpprocessor.c, libgputils/gpprocessor.h:
